[project]
name = "medical-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "twilio>=9.10.9",
    "uvicorn>=0.46.0",
]
